feat(image display): improved gallery, landing pg
